fix font size of title on mobile attempt 2

--- a/css/savvasxyz.css
+++ b/css/savvasxyz.css
@@ -97,7 +97,7 @@ border-bottom: 1.5px solid ;
 
 section#head-section h1 {     
     font-family: 'nova mono';
-    font-size: 10vh;    
+    font-size: 4rem;    
     font-weight: bold;    
     color:whitesmoke;
 }
@@ -155,6 +155,10 @@ color:var(--bg-color);
        body nav{
      background-color: #f8f9fa;
        }
+
+section#head-section h1{
+    font-size: 2.9rem;
+}
        
 }
 
